# openrv

./: .gitignore  CMakeLists.txt  README.md  version.cmake
Android/OpenRVClient/: settings.gradle
Android/OpenRVClient/app/: CMakeLists.txt  build.gradle
Android/OpenRVClient/app/src/main/: AndroidManifest.xml
Android/OpenRVClient/app/src/main/cpp/: openrvclient_jni.cpp
Android/OpenRVClient/app/src/main/java/com/monument_software/openrvclient/: MainActivity.java  OpenRVClientJNI.java
Android/OpenRVClient/app/src/main/res/values/: strings.xml
Android/OpenRVClient/gradle/wrapper/: gradle-wrapper.properties
Android/openrv/: .gitignore  settings.gradle
Android/openrv/gradle/wrapper/: gradle-wrapper.properties
Android/openrv/libopenrv/: CMakeLists.txt  build.gradle
Android/openrv/libopenrv/src/main/: AndroidManifest.xml
Android/openrv/libopenrv/src/main/cpp/: openrv_jni.cpp
Android/openrv/libopenrv/src/main/java/com/monument_software/libopenrv/: ORVContext.java  OpenRVJNI.java
cmdline/: main.cpp
examples/iosclient/OpenRVClient.xcodeproj/: project.pbxproj
examples/iosclient/openrvclient/: AppDelegate.m  Info.plist  InputFields.h  RemoteView.h  RemoteView.m  RemoteViewController.h  RemoteViewController.m  ViewController.h  ViewController.m  main.m
examples/iosclient/openrvclient.xcworkspace/: contents.xcworkspacedata
examples/iosclient/opervclient/: AppDelegate.h  AppDelegate.m  FramebufferLayer.h  FramebufferLayer.m  InputFields.h  InputFields.m  RemoteView.h  RemoteView.m  RemoteViewController.h  RemoteViewController.m  ViewController.h  ViewController.m
ios/: genfiles.sh
ios/OpenRV.xcodeproj/: project.pbxproj
ios/openrv/: OpenRV.h  OpenRV.m
libopenrv/: eventqueue.cpp  eventqueue.h  key_android.cpp  key_xkeygen.h  keys.cpp  keys.h  libopenrv.cpp  make_qtkeysum_mapping.py  mbedtlscontext.cpp  mbedtlscontext.h  messageparser.cpp  messageparser.h  opensslcontext.cpp  opensslcontext.h  orv_context.h  orv_error.cpp  orv_latencytesterclient.cpp  orv_logging.cpp  orvclientdefines.h  orvvncclient.cpp  orvvncclient.h  orvvncclientshareddata.cpp  orvvncclientshareddata.h  reader.h  rectdataparser.cpp  rectdataparser.h  rfb3xhandshake.cpp  rfb3xhandshake.h  rfbtypes.h  securitytypehandler.cpp  securitytypehandler.h  socket.cpp  socket.h  threadnotifier.cpp  threadnotifier.h  utils.cpp  utils.h  vncdes.cpp  vncdes.h  writer.h
libopenrv/public/: README.txt
libopenrv/public/libopenrv/: libopenrv.h  orv_config.h.cmake  orv_error.h  orv_errorcodes.h  orv_latencytesterclient.h  orv_logging.h  orv_qtkey_to_xkeysym.h  orv_version.h.cmake
qt/: README.txt  connectioninfowidget.cpp  connectioninfowidget.h  connectstatewidget.cpp  connectstatewidget.h  framebufferwidget.cpp  framebufferwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  newserverwidget.cpp  newserverwidget.h  orv_context_qt.cpp  orv_context_qt.h  orvwidget.cpp  orvwidget.h  serverlistmodel.cpp  serverlistmodel.h  serverlistwidget.cpp  serverlistwidget.h  topwidget.cpp  topwidget.h
tools/: make_xkey_hash.py
